--- a/package.json
+++ b/package.json
@@ -3,9 +3,8 @@
   "version": "1.0.0",
   "description": "Api - Sistema de Créditos",
   "private": true,
-  "main": "dist/index.js",
   "scripts": {
-    "start": "node dist/index.js",
+    "start": "npm run build && node dist/index.js",
     "build": "npm run clean && npm run transpile",
     "clean": "rimraf dist/",
     "transpile": "babel ./src --out-dir dist/",
